# cengine

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: test.c.ED947F4EDD4B1805.idx
scripts/: build.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c  test.c
src/vectors/: cengine-ivec.c  cengine-ivec.h  cengine-vec2.c  cengine-vec2.h  cengine-vec3.c  cengine-vec3.h  cengine-vec4.c  cengine-vec4.h  cengine-vector.c  cengine-vector.h
tests/: CMakeLists.txt  test-cengine-vector.c
